--- a/app/views/parking_allocation/_park_vehicle_form.html.erb
+++ b/app/views/parking_allocation/_park_vehicle_form.html.erb
@@ -1,21 +1,25 @@
 <!-- Modal -->
-<%= form_with model: ParkingAllocation.new, url: create_parking_allocation_path, id: "new_parking_allocation_form", local: true, html: { autocomplete: "off" } do |f| %>
-    <%= hidden_field_tag "parking_allocation[vehicle_id]", nil, id: 'parking_allocation_vehicle_id'%>
+<%= form_with model: ParkingAllocation.new, url: create_parking_allocation_path, id: "new_park_vehicle_form", local: true, html: { autocomplete: "off" } do |f| %>
+    <%= hidden_field_tag "parking_allocation[vehicle_id]", nil, id: 'park_vehicle_id'%>
     <%= hidden_field_tag "parking_allocation[vehicle_type]", nil, id: 'parking_allocation_vehicle_type'%>
 
-    <div class="modal fade" id="new_parking_allocation_modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal fade" id="new_park_vehicle_modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" aria-hidden="true">
             <div class="modal-content">
 
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="new_parking_allocation_modal_title"></h1>
+                    <h1 class="modal-title fs-5" id="new_park_vehicle_modal_title"></h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 
                 <div class="modal-body">
                     <div class="form-group mb-3">
-                        <label class="form-label" for="parent_id">Parking Entrance (Entry Point)</label>
+                        <label class="form-label" for="">Vehicle Type</label>
+                        <%= f.text_field :vehicle_type, class: "form-control", autocomplete: "off", placeholder: "", id: "parking_vehicle_type", disabled: true%>
+                    </div>
 
+                    <div class="form-group mb-3">
+                        <label class="form-label" for="parent_id">Parking Entrance (Entry Point)</label><span class="text-danger b">*</span>
                         <%=  select "parking_allocation", :parking_entry_point,  grouped_options_for_select( [['Select an Entry Point', @parking_entry_points.collect {|v| [ "Entry #{v.id} (#{v.cardinal_direction.capitalize})", v.id ] } ]], selected: params[:parking_entry_point]), {prompt: 'Select an Entry Point'},  class: "form-control select2-tag", id: "parking_entry_point" %>
                     </div>
                 </div>
@@ -24,7 +28,7 @@
                     <div class="mb-3"><span class="text-danger b">*</span> <span class="fst-italic"> = Required</span></div>
                     <div>
                         <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="submit_btn" >Save</button>
+                        <button type="submit" class="btn btn-primary vehicle-park-submit" id="submit_btn" >Save</button>
                     </div>
                 </div>
             </div>
