--- a/app/views/vehicle/_create_vehicle.html.erb
+++ b/app/views/vehicle/_create_vehicle.html.erb
@@ -11,12 +11,12 @@
                 
                 <div class="modal-body">
                     <div class="form-group mb-3">
-                        <label class="form-label" for="parent_id">Vehicle Type</label>
+                        <label class="form-label" for="parent_id">Vehicle Type</label> <span class="text-danger b">*</span>
                         <%= f.select :vehicle_type, @vehicle_type, {}, class: "form-select select2-tag", placeholder: "Select a Vehicle Type", id: "vehicle_type" %>
                     </div>
 
                     <div class="form-group mb-3">
-                        <%= f.label :plate_number_id, "Plate Number ID", class: "form-label" %> <span class="text-danger b">*</span>
+                        <%= f.label :plate_number_id, "Plate Number", class: "form-label" %> <span class="text-danger b">*</span>
                         <%= f.text_field :plate_number_id, class: "form-control app-placeholder", autocomplete: "off", placeholder: "e.g. ABC-1234"%>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="mb-3"><span class="text-danger b">*</span> <span class="fst-italic"> = Required</span></div>
                     <div>
                         <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="submit_btn" >Save</button>
+                        <button type="submit" class="btn btn-primary" id="submit_btn" >Submit</button>
                     </div>
                 </div>
             </div>
