--- a/app/views/parking_receipt/_parking_receipt_form.html.erb
+++ b/app/views/parking_receipt/_parking_receipt_form.html.erb
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <%= form_with model: ParkingReceipt.new, url: create_parking_receipt_path, id: "new_parking_receipt_form", local: true, html: { autocomplete: "off" } do |f| %>
-    <%= hidden_field_tag "parking_receipt[vehicle_id]", nil, id: 'receipt_vehicle_id'%>
-    <%= hidden_field_tag "parking_receipt[parking_slot_id]", nil, id: 'receipt_parking_slot_id'%>
+    <%= hidden_field_tag "parking_receipt[vehicle_id]", nil, class: 'receipt_vehicle_id'%>
+    <%= hidden_field_tag "parking_receipt[parking_slot_id]", nil, class: 'receipt_parking_slot_id'%>
     <%= hidden_field_tag "parking_receipt[datetime_in]", nil, id: 'receipt_datetime_in'%>
     <%= hidden_field_tag "parking_receipt[datetime_out]", nil, id: 'receipt_datetime_out'%>
 
@@ -17,7 +17,7 @@
                 <div class="modal-body">
                     <div class="form-group mb-3">
                         <label class="form-label" for="">Plate Number</label>
-                        <%= f.text_field :plate_number, class: "form-control", autocomplete: "off", placeholder: "", id: "receipt_plate_number", readonly: true%>
+                        <%= f.text_field :plate_number, class: "form-control receipt_plate_number", autocomplete: "off", placeholder: "", readonly: true%>
                     </div>
 
                     <div class="form-group mb-3">
@@ -57,7 +57,7 @@
                 <div class="modal-footer justify-content-between">
                     <div class="mb-3 col-8"><span class="fst-italic">Note: 20/hour for vehicles parked in SP; 60/hour for vehicles parked in MP; 100/hour for vehicles parked in LP;</span></div>
                     <div>
-                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn cancel-btn" data-bs-target="#return_vehicle_modal" data-bs-toggle="modal">Back</button>
                         <button type="submit" class="btn btn-primary" id="submit_btn" >Submit</button>
                     </div>
                 </div>
