--- a/app/views/parking_allocation/_parking_lot_layout.html.erb
+++ b/app/views/parking_allocation/_parking_lot_layout.html.erb
@@ -16,17 +16,16 @@
             <%# Parking slots container %>
             <div class="row">
                 <% @parking_slots.each_slice(6).with_index do |row_slots, row_index| %>
-                    <% if row_index == 0 || row_index == 2 %>
+                    <% if row_index == 0  %>
                         <% row_slots.reverse_each do |parking_slot| %>
                             <% parking_slot.id <= 12 ? parking_slot_spacing = "border-bottom-0 mb-3" : parking_slot_spacing = "border-top-0 mt-3" %>
                             <% parking_slot.parking_slot_status == "available" ? parking_slot_status = "bg-success" : parking_slot_status = "bg-danger" %>
                             
-                            <div class="col-1 border p-2 <%= parking_slot_spacing %>">
+                            <div class="col-1 border border-3 border-dark p-2 <%= parking_slot_spacing %>">
                                 <p class="mb-2 fw-bold"><%= set_parking_slot_type(parking_slot.parking_slot_level) %></p>
                                 <p><%= parking_slot.plate_number_id.present? ? parking_slot.plate_number_id : "#"  %></p>
-                                <p class="mb-2">Level: <%= parking_slot.parking_slot_level %></p>
                                 <span class="badge mb-2 <%= parking_slot_status %>"><%= parking_slot.parking_slot_status.capitalize %></span>
-                                <button class="btn btn-dark rounded-circle px-2 py-1 <%= parking_slot.vehicle_id.blank? && parking_slot.parking_count == 0 || parking_slot.parking_count == 2 ? "disabled" : ""%>" id="new_exit_vehicle_btn" title="Plate Number: <%=parking_slot.plate_number_id%>" data-bs-toggle="modal" data-bs-target="#new_exit_vehicle_modal" data-modal-title="Plate Number: <%= parking_slot.plate_number_id %>" data-vehicle-id="<%= parking_slot.vehicle_id %>" data-vehicle-type="<%= parking_slot.vehicle_type %>" data-parking-slot-id="<%= parking_slot.id %>" data-parking-entry-point="<%= parking_slot.parking_entry_point %>" data-datetime-in="<%= parking_slot.datetime.present? ? set_datetime_format(parking_slot.datetime) : "" %>" data-datetime-out="<%= set_datetime_format(DateTime.now) %>"><i class="bi bi-x-lg"></i></button>
+                                <button class="btn btn-dark rounded-circle px-2 py-1 <%= parking_slot.vehicle_id.blank? && parking_slot.parking_count == 0 || parking_slot.parking_count == 2 ? "disabled" : ""%>" id="new_exit_vehicle_btn" title="Exit Parking Slot • Plate Number: <%=parking_slot.plate_number_id%>" data-bs-toggle="modal" data-bs-target="#new_exit_vehicle_modal" data-modal-title="Plate Number: <%= parking_slot.plate_number_id %>" data-vehicle-id="<%= parking_slot.vehicle_id %>" data-vehicle-type="<%= parking_slot.vehicle_type %>" data-parking-slot-id="<%= parking_slot.id %>" data-parking-entry-point="<%= parking_slot.parking_entry_point %>" data-datetime-in="<%= parking_slot.datetime.present? ? set_datetime_format(parking_slot.datetime) : "" %>" data-datetime-out="<%= set_datetime_format(DateTime.now) %>"><i class="bi bi-car-front-fill"></i></button>
                             </div>
                         <% end %>
                     <% else %>
@@ -34,12 +33,11 @@
                             <% parking_slot.id <= 12 ? parking_slot_spacing = "border-bottom-0 mb-3" : parking_slot_spacing = "border-top-0 mt-3" %>
                             <% parking_slot.parking_slot_status == "available" ? parking_slot_status = "bg-success" : parking_slot_status = "bg-danger" %>
                             
-                            <div class="col-1 border p-2 <%= parking_slot_spacing %>">
+                            <div class="col-1 border border-3 border-dark p-2 <%= parking_slot_spacing %>">
                                 <p class="mb-2 fw-bold"><%= set_parking_slot_type(parking_slot.parking_slot_level) %></p>
                                 <p><%= parking_slot.plate_number_id.present? ? parking_slot.plate_number_id : "#"  %></p>
-                                <p class="mb-2">Level: <%= parking_slot.parking_slot_level %></p>
                                 <span class="badge mb-2 <%= parking_slot_status %>"><%= parking_slot.parking_slot_status.capitalize %></span>
-                                <button class="btn btn-dark rounded-circle px-2 py-1 <%= parking_slot.vehicle_id.blank? && parking_slot.parking_count == 0 || parking_slot.parking_count == 2 ? "disabled" : ""%>" id="new_exit_vehicle_btn" title="Plate Number: <%=parking_slot.plate_number_id%>" data-bs-toggle="modal" data-bs-target="#new_exit_vehicle_modal" data-modal-title="Plate Number: <%= parking_slot.plate_number_id %>" data-vehicle-id="<%= parking_slot.vehicle_id %>" data-vehicle-type="<%= parking_slot.vehicle_type %>" data-parking-slot-id="<%= parking_slot.id %>" data-parking-entry-point="<%= parking_slot.parking_entry_point %>" data-datetime-in="<%= parking_slot.datetime.present? ? set_datetime_format(parking_slot.datetime) : "" %>" data-datetime-out="<%= set_datetime_format(DateTime.now) %>"><i class="bi bi-x-lg"></i></button>
+                                <button class="btn btn-dark rounded-circle px-2 py-1 <%= parking_slot.vehicle_id.blank? && parking_slot.parking_count == 0 || parking_slot.parking_count == 2 ? "disabled" : ""%>" id="new_exit_vehicle_btn" title="Exit Parking Slot • Plate Number: <%=parking_slot.plate_number_id%>" data-bs-toggle="modal" data-bs-target="#new_exit_vehicle_modal" data-modal-title="Plate Number: <%= parking_slot.plate_number_id %>" data-vehicle-id="<%= parking_slot.vehicle_id %>" data-vehicle-type="<%= parking_slot.vehicle_type %>" data-parking-slot-id="<%= parking_slot.id %>" data-parking-entry-point="<%= parking_slot.parking_entry_point %>" data-datetime-in="<%= parking_slot.datetime.present? ? set_datetime_format(parking_slot.datetime) : "" %>" data-datetime-out="<%= set_datetime_format(DateTime.now) %>"><i class="bi bi-car-front-fill"></i></button>
                             </div>
                         <% end %>
                     <% end %>
