--- a/app/views/parking_entry_point/_entry_point_form.html.erb
+++ b/app/views/parking_entry_point/_entry_point_form.html.erb
@@ -17,7 +17,7 @@
 
                     <div class="form-group mb-3">
                         <label class="form-label" for="">Status</label>
-                        <%= f.select :vehicle_type, [["Select a Status", ""], ["Active", "active"], ["Inactive", "inactive"]], {}, class: "form-select select2-tag", placeholder: "Select a Status", id: "parking_entry_point_status" %>
+                        <%= f.select :status, [["Select a Status", ""], ["Active", "active"], ["Inactive", "inactive"]], {}, class: "form-select select2-tag", placeholder: "Select a Status", id: "parking_entry_point_status" %>
                     </div>
                 </div>
 
