--- a/app/views/parking_entry_point/update.js.erb
+++ b/app/views/parking_entry_point/update.js.erb
@@ -3,8 +3,7 @@ toastr.options.timeOut = 9000;
 toastr.options.newestOnTop = true;
 toastr.options.preventDuplicates = true;
 
-$('#new_exit_vehicle_modal').modal('hide');
-$('#return_vehicle_modal').modal('hide');
+$('#update_entry_point_modal').modal('hide');
 
 toastr.success('Successfully saved!', 'Message')
 setTimeout(function(){
