--- a/app/views/parking_allocation/_exit_vehicle_form.html.erb
+++ b/app/views/parking_allocation/_exit_vehicle_form.html.erb
@@ -1,9 +1,7 @@
 <!-- Modal -->
-<%= form_with model: ParkingAllocation.new, url: create_parking_allocation_path, id: "new_exit_vehicle_form", local: true, html: { autocomplete: "off" } do |f| %>
-    <%= hidden_field_tag "parking_allocation[vehicle_id]", nil, id: 'unpark_vehicle_id'%>
-    <%= hidden_field_tag "parking_allocation[vehicle_type]", nil, id: 'unpark_vehicle_type'%>
-    <%= hidden_field_tag "parking_allocation[parking_slot_id]", nil, id: 'parking_allocation_parking_slot_id'%>
-    <%= hidden_field_tag "parking_allocation[parking_entry_point]", nil, id: 'parking_allocation_parking_entry_point'%>
+<%= form_with model: ParkingAllocation.new, url: update_parking_allocation_path, id: "new_exit_vehicle_form", local: true, html: { autocomplete: "off" } do |f| %>
+    <%= hidden_field_tag "parking_allocation[vehicle_id]", nil, id: 'exit_vehicle_id'%>
+    <%= hidden_field_tag "parking_allocation[vehicle_status]", "exiting", id: 'exit_vehicle_status'%>
 
     <div class="modal fade" id="new_exit_vehicle_modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" aria-hidden="true">
@@ -18,11 +16,6 @@
                     <div class="form-group mb-3">
                         <label class="form-label" for="parent_id">Parking Entry Time</label>
                         <%= f.text_field :datetime, class: "form-control read-only", autocomplete: "off", placeholder: "", id: "parking_allocation_datetime_in", readonly: true%>
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label class="form-label" for="parent_id">Parking Exit Time</label>
-                        <%= f.text_field :datetime_exit, class: "form-control read-only", autocomplete: "off", placeholder: "", id: "parking_allocation_datetime_out", readonly: true%>
                     </div>
                 </div>
 
