--- a/app/views/parking_allocation/create.js.erb
+++ b/app/views/parking_allocation/create.js.erb
@@ -6,6 +6,7 @@ toastr.options.preventDuplicates = true;
 
 <%unless @parking_allocation.errors.any?%>
     $('#new_park_vehicle_modal').modal('hide');
+    $('#new_unpark_vehicle_modal').modal('hide');
     
     toastr.success('Successfully saved!', 'Message')
     setTimeout(function(){
