--- a/app/views/parking_entry_point/_entry_point_form.html.erb
+++ b/app/views/parking_entry_point/_entry_point_form.html.erb
@@ -12,7 +12,7 @@
                 <div class="modal-body">
                     <div class="form-group mb-3">
                         <label class="form-label" for="">Entry Point</label>
-                        <%=  select "parking_entry_point", :id,  grouped_options_for_select( [['Select an Entry Point', @parking_entry_points.collect {|v| [ "Entry #{v.id} (#{v.cardinal_direction.capitalize})", v.id ] } ]], selected: params[:parking_entry_point]), {prompt: 'Select an Entry Point'},  class: "form-control select2-tag", id: "parking_entry_point_direction" %>
+                        <%=  select "parking_entry_point", :id,  grouped_options_for_select( [['Select an Entry Point', @parking_entry_points.collect {|v| [ "Entry #{v.id}", v.id ] } ]], selected: params[:parking_entry_point]), {prompt: 'Select an Entry Point'},  class: "form-control select2-tag", id: "parking_entry_point_direction" %>
                     </div>
 
                     <div class="form-group mb-3">
