--- a/app/views/parking_allocation/_parking_lot_layout.html.erb
+++ b/app/views/parking_allocation/_parking_lot_layout.html.erb
@@ -1,10 +1,10 @@
-<div class="d-flex flex-column justify-content-center mx-5">
+<div class="d-flex flex-column justify-content-center mx-5 mt-3">
     <div class="row col-12 mx-auto border border-3 border-dark border-top-0 px-5 pb-5">
         <%# Entry points %>
         <div class="row col-12 mx-auto mb-3">
-            <% @parking_entry_points.each do |parking_entry_point| %>
+            <% @parking_entry_points.each_with_index do |parking_entry_point, index| %>
                 <div class="col text-center">
-                    <h2 class="fs-5 fw-bold">Entry Point <%=parking_entry_point.id%></h2>
+                    <h2 class="fs-5 fw-bold">Entry Point <%=index + 1%></h2>
                     <i class="bi bi-arrow-down-up fs-4"></i>
                 </div>
             <% end %>
@@ -21,7 +21,7 @@
 
         <%# Parking slot list %>
         <% @parking_slots.each do |parking_slot| %>
-            <div class="col-2 text-center border border-3 border-dark p-2 <%= parking_slot_border(parking_slot.id) %>">
+            <div class="col-2 text-center border border-3 border-dark p-2 border-top-0 border-bottom-0 mb-5">
                 <p class="mb-2 fw-bold"><%= set_parking_slot_type(parking_slot.parking_slot_level) %></p>
                 <p><%= parking_slot.plate_number_id.present? ? parking_slot.plate_number_id : "#"  %></p>
                 <p class="badge mb-2 <%= parking_slot_badge_status(parking_slot.parking_slot_status) %>"><%= parking_slot.parking_slot_status.capitalize %></p>
